# amr_project

./: CMakeLists.txt  README.md  package.xml
action/: MoveCmd.action
config/: nav2_params.yaml  slam_toolbox_params.yaml
document/: Viewed_README.ini  frames_2026-05-15_10.49.08.gv
document/plan/: # Graph SLAM Framework.ini  DWA_SLAM  graph_slam.md
include/: autonomous_exploration.h  slam_robot.h
launch/: agv_robot.launch.py  autonomous_slam.launch.py  full_slam.launch.py  gazebo.launch.py  navigation.launch.py  rviz2.launch.py  slam.launch.py
map/: map.pgm  map.yaml
rviz/: navigation.rviz  slam.rviz  view_robot.rviz
src/: action_robot.cpp  action_server.cpp  autonomous_exploration.cpp  navigation_robot.cpp  robot_controller.cpp  slam_robot.cpp  tf2_listener.cpp
urdf/: agv_robot.urdf.xacro  gazebo.xacro
worlds/experiment_rooms/: README.md
worlds/experiment_rooms/models/dynamic_obstacle/: model.sdf
worlds/experiment_rooms/models/exp_empty_rooms/: model.config  model.sdf
worlds/experiment_rooms/worlds/room1/: world.model
worlds/experiment_rooms/worlds/room1/map/: room1.yaml
worlds/experiment_rooms/worlds/room2/: world.model  world_dynamic.model
worlds/experiment_rooms/worlds/room2/map/: room2.yaml
worlds/experiment_rooms/worlds/room3/: world.model  world_dynamic.model
worlds/experiment_rooms/worlds/room3/map/: room3.yaml
worlds/experiment_rooms/worlds/room4/: world.model  world_dynamic.model
worlds/experiment_rooms/worlds/room4/map/: room4.yaml
